[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project]
name = "scaaml"
authors = [
   { name="Elie Bursztein"},
   { name="Luca Invernizzi"},
   { name="Karel Král"},
   { name="Jean-Michel Picod"},
]
description = "Side Channel Attack Assisted with Machine Learning"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["machine learning", "dataset", "side channel attack"]
license = {text = "Apache License 2.0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Jupyter",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]
dependencies = [
    "chipwhisperer",
    "colorama",
    "cryptography",
    "matplotlib",
    "numpy",
    "pandas",
    "Pillow",
    "pip",
    "pygments",
    "pytest",
    "pyvisa",
    "pyvisa-py",
    "scipy",
    "semver",
    "setuptools",
    "tabulate",
    "tensorflow",
    "termcolor",
    "tqdm",
    "wheel",
]

[tool.setuptools.dynamic]
version = {attr = "scaaml.__version__"}

[project.optional-dependencies]

[project.scripts]

[project.urls]
"Homepage" = "https://github.com/google/scaaml"
"Bug Tracker" = "https://github.com/google/scaaml"

[tool.setuptools.package-data]
scaaml = ["py.typed"]
